Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23452

Assertion `buf_page_get_io_fix(bpage) == BUF_IO_NONE' failed in buf_page_set_sticky

    XMLWordPrintable

Details

    Description

      10.3 863e28ff3e

      mysqld: /home/mariadb/sticky/10.3/storage/innobase/include/buf0buf.ic:569: void buf_page_set_sticky(buf_page_t*): Assertion `buf_page_get_io_fix(bpage) == BUF_IO_NONE' failed.
      200811 19:20:19 [ERROR] mysqld got signal 6 ;
       
      #3  0x00007f4dc17634a2 in __GI___assert_fail (assertion=0x558462877270 "buf_page_get_io_fix(bpage) == BUF_IO_NONE", 
          file=0x558462876eb8 "/home/mariadb/sticky/10.3/storage/innobase/include/buf0buf.ic", line=569, 
          function=0x55846287dce0 <buf_page_set_sticky(buf_page_t*)::__PRETTY_FUNCTION__> "void buf_page_set_sticky(buf_page_t*)") at assert.c:101
      #4  0x00005584621b068f in buf_page_set_sticky (bpage=0x7f4da3afe610) at /home/mariadb/sticky/10.3/storage/innobase/include/buf0buf.ic:569
      #5  0x00005584621c5f3b in buf_page_create (page_id=..., page_size=..., mtr=0x7f4d800aaf60) at /home/mariadb/sticky/10.3/storage/innobase/buf/buf0buf.cc:5656
      #6  0x00005584622803d1 in fsp_page_create (space=0x558465705200, offset=509, page_size=..., rw_latch=RW_X_LATCH, mtr=0x7f4d800aaf60, init_mtr=0x7f4d800aaf60)
          at /home/mariadb/sticky/10.3/storage/innobase/fsp/fsp0fsp.cc:1190
      #7  0x0000558462280bbd in fsp_alloc_free_page (space=0x558465705200, page_size=..., hint=507, rw_latch=RW_X_LATCH, mtr=0x7f4d800aaf60, init_mtr=0x7f4d800aaf60)
          at /home/mariadb/sticky/10.3/storage/innobase/fsp/fsp0fsp.cc:1337
      #8  0x0000558462284b75 in fseg_alloc_free_page_low (space=0x558465705200, page_size=..., seg_inode=0x7f4da4903e72 "", hint=507, direction=111 'o', rw_latch=RW_X_LATCH, 
          mtr=0x7f4d800aaf60, init_mtr=0x7f4d800aaf60, has_done_reservation=1) at /home/mariadb/sticky/10.3/storage/innobase/fsp/fsp0fsp.cc:2379
      #9  0x0000558462285491 in fseg_alloc_free_page_general (seg_header=0x7f4da4f5c03c "", hint=507, direction=111 'o', has_done_reservation=1, mtr=0x7f4d800aaf60, init_mtr=0x7f4d800aaf60)
          at /home/mariadb/sticky/10.3/storage/innobase/fsp/fsp0fsp.cc:2515
      #10 0x0000558462137bfb in trx_undo_add_page (undo=0x7f4d38104c00, mtr=0x7f4d800aaf60) at /home/mariadb/sticky/10.3/storage/innobase/trx/trx0undo.cc:787
      #11 0x00005584621140ff in trx_undo_report_row_operation (thr=0x7f4d3837f850, index=0x7f4d3440e090, clust_entry=0x7f4d380f0190, update=0x0, cmpl_info=0, rec=0x7f4da4638337 "", 
          offsets=0x7f4d800abaa0, roll_ptr=0x7f4d800ab4a0) at /home/mariadb/sticky/10.3/storage/innobase/trx/trx0rec.cc:2104
      #12 0x00005584621843dc in btr_cur_del_mark_set_clust_rec (block=0x7f4da3aa5f60, rec=0x7f4da4638337 "", index=0x7f4d3440e090, offsets=0x7f4d800abaa0, thr=0x7f4d3837f850, 
          entry=0x7f4d380f0190, mtr=0x7f4d800abd00) at /home/mariadb/sticky/10.3/storage/innobase/btr/btr0cur.cc:5211
      #13 0x00005584620badb9 in row_upd_del_mark_clust_rec (node=0x7f4d3837f548, index=0x7f4d3440e090, offsets=0x7f4d800abaa0, thr=0x7f4d3837f850, referenced=0, foreign=false, 
          mtr=0x7f4d800abd00) at /home/mariadb/sticky/10.3/storage/innobase/row/row0upd.cc:3001
      #14 0x00005584620bb85f in row_upd_clust_step (node=0x7f4d3837f548, thr=0x7f4d3837f850) at /home/mariadb/sticky/10.3/storage/innobase/row/row0upd.cc:3179
      #15 0x00005584620bbe38 in row_upd (node=0x7f4d3837f548, thr=0x7f4d3837f850) at /home/mariadb/sticky/10.3/storage/innobase/row/row0upd.cc:3308
      #16 0x00005584620bc406 in row_upd_step (thr=0x7f4d3837f850) at /home/mariadb/sticky/10.3/storage/innobase/row/row0upd.cc:3452
      #17 0x000055846204dd47 in row_update_for_mysql (prebuilt=0x7f4d3837eaa0) at /home/mariadb/sticky/10.3/storage/innobase/row/row0mysql.cc:1847
      #18 0x0000558461eb4d83 in ha_innobase::delete_row (this=0x7f4d38209418, record=0x7f4d380feb50 "\371\004") at /home/mariadb/sticky/10.3/storage/innobase/handler/ha_innodb.cc:8909
      #19 0x0000558461c90850 in handler::ha_delete_row (this=0x7f4d38209418, buf=0x7f4d380feb50 "\371\004") at /home/mariadb/sticky/10.3/sql/handler.cc:6554
      #20 0x0000558461e38ebb in TABLE::delete_row (this=0x7f4d38647f60) at /home/mariadb/sticky/10.3/sql/sql_delete.cc:245
      #21 0x0000558461e35fd9 in mysql_delete (thd=0x7f4d38000d50, table_list=0x7f4d38011920, conds=0x0, order_list=0x7f4d38005618, limit=18446744073709551415, options=549755813888, 
          result=0x0) at /home/mariadb/sticky/10.3/sql/sql_delete.cc:720
      #22 0x00005584619648d3 in mysql_execute_command (thd=0x7f4d38000d50) at /home/mariadb/sticky/10.3/sql/sql_parse.cc:4649
      #23 0x000055846196f63a in mysql_parse (thd=0x7f4d38000d50, rawbuf=0x7f4d380117b8 "DELETE /* QNO 4357 CON_ID 15 */ FROM transforms.insert_select_79412", length=67, 
          parser_state=0x7f4d800ad610, is_com_multi=false, is_next_command=false) at /home/mariadb/sticky/10.3/sql/sql_parse.cc:7810
      #24 0x000055846195be6f in dispatch_command (command=COM_QUERY, thd=0x7f4d38000d50, packet=0x7f4d386949f1 "DELETE /* QNO 4357 CON_ID 15 */ FROM transforms.insert_select_79412", 
          packet_length=67, is_com_multi=false, is_next_command=false) at /home/mariadb/sticky/10.3/sql/sql_parse.cc:1847
      #25 0x000055846195a789 in do_command (thd=0x7f4d38000d50) at /home/mariadb/sticky/10.3/sql/sql_parse.cc:1393
      #26 0x0000558461ad4131 in do_handle_one_connection (connect=0x5584657c7d40) at /home/mariadb/sticky/10.3/sql/sql_connect.cc:1403
      #27 0x0000558461ad3e93 in handle_one_connection (arg=0x5584657c7d40) at /home/mariadb/sticky/10.3/sql/sql_connect.cc:1308
      #28 0x00007f4dc246a6db in start_thread (arg=0x7f4d800ae700) at pthread_create.c:463
      #29 0x00007f4dc1854a3f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      The test case which I have for it is very big and unstable, it's not good for debugging, but was sufficient for getting an rr profile.

      Observed on 10.2-10.4. I haven't seen it happen on 10.5 so far.
      May be related to MDEV-23439.

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 7h 40m
                  7h 40m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.